style: add more style in table, update specs

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import '../src/scss/mixins.scss';
 @import '../src/scss/variables.scss';
 
+/** Reset default browsers styles */
 * {
     margin: 0;
     padding: 0;
