feat: integrate reselect, update specs

--- a/src/football/components/form-player/form-player.scss
+++ b/src/football/components/form-player/form-player.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
+    margin-bottom: 20px;
     .form-player-ctn__form-player-group {
         margin: 10px 0;
         width: 100%;
